@@ -26,6 +26,7 @@ import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
 import java.nio.charset.CharsetEncoder;
 import java.nio.charset.CodingErrorAction;
+import java.nio.charset.StandardCharsets;
 import java.text.ParseException;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -44,6 +45,7 @@ import java.util.Set;
 import java.util.TreeMap;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.concurrent.atomic.AtomicLong;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -59,7 +61,6 @@ import org.boon.json.JsonParserFactory;
 
 import com.geoxp.GeoXPLib;
 import com.geoxp.GeoXPLib.GeoXPShape;
-import com.google.common.base.Charsets;
 import com.google.common.collect.ImmutableMap;
 
 import io.warp10.CapacityExtractorOutputStream;
@@ -257,7 +258,40 @@ public class GTSHelper {
    * @return a fully sorted GTS.
    */
   public static final GeoTimeSerie fullsort(GeoTimeSerie gts, boolean reversed) {
-    fullquicksort(gts, 0, gts.values - 1, reversed);
+    if (gts.sorted) {
+      // If the GTS is already sorted, we can only fullsort where ticks are equals.
+
+      if (gts.reversed != reversed) {
+        // This will effectively flip the GTS
+        sort(gts, reversed);
+      }
+
+      List<int[]> ranges = new ArrayList<int[]>();
+
+      // Start index of the current possible range.
+      int startIndex = 0;
+
+      for (int i = 1; i < gts.values; i++) {
+        if (gts.ticks[i] != gts.ticks[startIndex]) {
+          // End of range, check that it contains several indices.
+          if (i - 1 - startIndex > 0) {
+            // Valid range, add it.
+            ranges.add(new int[]{startIndex, i - 1});
+          }
+          startIndex = i;
+        }
+      }
+
+      // Check if the loop ended before adding the last range. This range ends with the last index.
+      if (startIndex < gts.values - 1) {
+        ranges.add(new int[]{startIndex, gts.values - 1});
+      }
+
+      // Sort using the computed ranges.
+      fullquicksort(gts, ranges, reversed);
+    } else {
+      fullquicksort(gts, 0, gts.values - 1, reversed);
+    }
 
     gts.sorted = true;
     gts.reversed = reversed;
@@ -339,7 +373,10 @@ public class GTSHelper {
   }
   
   public static final GeoTimeSerie valueSort(GeoTimeSerie gts, boolean reversed) {
+    gts.sorted = false;
+
     quicksortByValue(gts, 0, gts.values - 1, reversed);
+
     return gts;
   }
 
@@ -807,7 +844,10 @@ public class GTSHelper {
   }
 
   public static GeoTimeSerie locationSort(GeoTimeSerie gts) {
+    gts.sorted = false;
+    
     quicksortByLocation(gts,0,gts.values - 1,false);
+
     return gts;
   }
 
@@ -899,6 +939,25 @@ public class GTSHelper {
     List<int[]> ranges = new ArrayList<int[]>();
 
     ranges.add(new int[]{low, high});
+
+    fullquicksort(gts, ranges, reversed);
+  }
+
+  /**
+   * Apply a quicksort on the given GTS instance using all the data at each tick to make the comparisons.
+   * Use natural ordering to first order according to ticks then values, then locations, then elevations.
+   * @param gts The GTS to be sorted, will be modified in place.
+   * @param ranges Ranges of indexes to sort in the GTS.
+   * @param reversed Whether to return a reversed GTS or not.
+   */
+  private static void fullquicksort(GeoTimeSerie gts, List<int[]> ranges, final boolean reversed) {
+
+    if (0 == gts.values) {
+      return;
+    }
+
+    int low;
+    int high;
 
     while (!ranges.isEmpty()) {
       int[] range = ranges.remove(0);
@@ -1289,7 +1348,7 @@ public class GTSHelper {
     }
       
     if (value instanceof byte[]) {
-      value = new String((byte[]) value, Charsets.ISO_8859_1);
+      value = new String((byte[]) value, StandardCharsets.ISO_8859_1);
     }
     
     //
@@ -2119,7 +2178,7 @@ public class GTSHelper {
     
     if (name.contains("%")) {
       try {      
-        name = URLDecoder.decode(name, "UTF-8");
+        name = URLDecoder.decode(name, StandardCharsets.UTF_8.name());
       } catch (UnsupportedEncodingException uee) {
         // Can't happen, we're using UTF-8
       }      
@@ -2285,6 +2344,10 @@ public class GTSHelper {
   }
   
   public static GTSEncoder parse(GTSEncoder encoder, String str, Map<String,String> extraLabels, Long now, long maxValueSize, AtomicBoolean parsedAttributes) throws ParseException, IOException {
+    return parse(encoder, str, extraLabels, now, maxValueSize, parsedAttributes, null, null, null);
+  }
+  
+  public static GTSEncoder parse(GTSEncoder encoder, String str, Map<String,String> extraLabels, Long now, long maxValueSize, AtomicBoolean parsedAttributes, Long maxpast, Long maxfuture, AtomicLong ignoredCount) throws ParseException, IOException {
 
     int idx = 0;
     
@@ -2319,6 +2382,22 @@ public class GTSHelper {
       }
     }
 
+    boolean ignored = false;
+    
+    if (null != maxpast && timestamp < maxpast) {
+      if (null == ignoredCount) {
+        throw new ParseException("Timestamp " + timestamp + " is too far in the past.", idx);
+      } else {
+        ignored = true;
+      }
+    } else if (null != maxfuture && timestamp > maxfuture) {
+      if (null == ignoredCount) {
+        throw new ParseException("Timestamp " + timestamp + " is too far in the future.", idx);
+      } else {
+        ignored = true;
+      }
+    }
+    
     // Advance past the '/'
     idx++;
     
@@ -2404,7 +2483,7 @@ public class GTSHelper {
       //if (name.contains("%")) {
       if (-1 != UnsafeString.indexOf(name, '%')) {
         try {      
-          name = URLDecoder.decode(name, "UTF-8");
+          name = URLDecoder.decode(name, StandardCharsets.UTF_8.name());
         } catch (UnsupportedEncodingException uee) {
           // Can't happen, we're using UTF-8
         }      
@@ -2520,7 +2599,11 @@ public class GTSHelper {
       encoder.getMetadata().setAttributes(attributes);
     }
 
-    encoder.addValue(timestamp, location, elevation, value);
+    if (!ignored) {
+      encoder.addValue(timestamp, location, elevation, value);
+    } else {
+      ignoredCount.addAndGet(1);
+    }
     
     return encoder;
   }
@@ -2541,7 +2624,7 @@ public class GTSHelper {
         value = valuestr.substring(1, valuestr.length() - 1);
         if (((String)value).contains("%")) {
           try {
-            value = URLDecoder.decode((String) value, "UTF-8");
+            value = URLDecoder.decode((String) value, StandardCharsets.UTF_8.name());
           } catch (UnsupportedEncodingException uee) {
             // Can't happen, we're using UTF-8
           }
@@ -2977,7 +3060,7 @@ public class GTSHelper {
   }
   
   public static final long classId(long k0, long k1, String name) {
-    CharsetEncoder ce = Charsets.UTF_8.newEncoder();
+    CharsetEncoder ce = StandardCharsets.UTF_8.newEncoder();
 
     ce.onMalformedInput(CodingErrorAction.REPLACE)
     .onUnmappableCharacter(CodingErrorAction.REPLACE)
@@ -3076,7 +3159,7 @@ public class GTSHelper {
     // Implementation is a sun.nio.cs.UTF_8$Encoder which implements ArrayEncoder
     //
     
-    CharsetEncoder ce = Charsets.UTF_8.newEncoder();
+    CharsetEncoder ce = StandardCharsets.UTF_8.newEncoder();
     
     //
     // Allocate arrays large enough for most cases
@@ -3199,8 +3282,8 @@ public class GTSHelper {
     long[] sipkey = SipHashInline.getKey(key);
     
     for (Entry<String, String> entry: labels.entrySet()) {
-      hashes[idx] = SipHashInline.hash24_palindromic(sipkey[0], sipkey[1], entry.getKey().getBytes(Charsets.UTF_8));
-      hashes[idx+1] = SipHashInline.hash24_palindromic(sipkey[0], sipkey[1], entry.getValue().getBytes(Charsets.UTF_8));
+      hashes[idx] = SipHashInline.hash24_palindromic(sipkey[0], sipkey[1], entry.getKey().getBytes(StandardCharsets.UTF_8));
+      hashes[idx+1] = SipHashInline.hash24_palindromic(sipkey[0], sipkey[1], entry.getValue().getBytes(StandardCharsets.UTF_8));
       idx+=2;
     }
     
@@ -3441,11 +3524,11 @@ public class GTSHelper {
       
       try {
         if (name.contains("%")) {
-          name = URLDecoder.decode(name, "UTF-8");
+          name = URLDecoder.decode(name, StandardCharsets.UTF_8.name());
         }
         
         if (value.contains("%")) {
-          value = URLDecoder.decode(value, "UTF-8");
+          value = URLDecoder.decode(value, StandardCharsets.UTF_8.name());
         }        
       } catch (UnsupportedEncodingException uee) {
         // Can't happen, we're using UTF-8 which is a standard JVM encoding.
@@ -3476,7 +3559,7 @@ public class GTSHelper {
     
     if (classSelector.contains("%")) {
       try {      
-        classSelector = URLDecoder.decode(classSelector, "UTF-8");
+        classSelector = URLDecoder.decode(classSelector, StandardCharsets.UTF_8.name());
       } catch (UnsupportedEncodingException uee) {
         // Can't happen, we're using UTF-8
       }      
@@ -3588,7 +3671,7 @@ public class GTSHelper {
     } else if (value instanceof String) {
       sb.append("'");
       try {
-        String encoded = WarpURLEncoder.encode((String) value, "UTF-8");
+        String encoded = WarpURLEncoder.encode((String) value, StandardCharsets.UTF_8);
         sb.append(encoded);
       } catch (UnsupportedEncodingException uee) {
         // Won't happen
@@ -3605,7 +3688,7 @@ public class GTSHelper {
       return;
     }
     try {
-      String encoded = WarpURLEncoder.encode(name, "UTF-8");
+      String encoded = WarpURLEncoder.encode(name, StandardCharsets.UTF_8);
       sb.append(encoded);
     } catch (UnsupportedEncodingException uee) {      
     }
@@ -7612,7 +7695,7 @@ public class GTSHelper {
       // Generate bSAX words
       //
       
-      String word = new String(OrderPreservingBase64.encode(SAXUtils.bSAX(levels, symbols)), Charsets.US_ASCII);
+      String word = new String(OrderPreservingBase64.encode(SAXUtils.bSAX(levels, symbols)), StandardCharsets.US_ASCII);
       
       GTSHelper.setValue(saxGTS, gts.ticks[i], word);      
     }
